fix z-index

--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ header {
     top:0;
     width: 100%;
     background-color: #fff;
+    z-index: 1;
 }
 
 .header-container {
